--- a/public/signup.html
+++ b/public/signup.html
@@ -17,10 +17,15 @@
   </form>
 
   
-      <p style="text-align:center; margin-top: 10px;">
-        Don't have an account? <a href="signup.html">Sign up</a>
-      </p>
+  <p style="text-align:center; margin-top: 10px;">
+    Don't have an account? <a href="signup.html">Sign up</a>
+  </p>
+  <p style="text-align: center;">
+    Already have an account? <a href="login.html">Login</a>
+  </p>
+  
+  
 
-  <script src="main.js"></script>
+  <script src="signup.js"></script>
 </body>
 </html>
