--- a/public/expense.html
+++ b/public/expense.html
@@ -37,8 +37,12 @@
         <button type="submit">Add Expense</button>
         <button id="buyPremiumBtn">Buy Premium</button>
 
+        <button id="logoutBtn" style="float: right; margin: 10px;">Logout</button>
+
+
         <button id="show-leaderboard">Show Leaderboard</button>
-        <ul id="leaderboard-list"></ul>
+<ul id="leaderboard-list" style="margin-top: 15px;"></ul>
+
         
     </form>
     <div>
