--- a/public/expense.html
+++ b/public/expense.html
@@ -39,8 +39,8 @@
 
         <button id="logoutBtn" style="float: right; margin: 10px;">Logout</button>
 
-
-        <button id="show-leaderboard">Show Leaderboard</button>
+        <h2 id="premiumMsg" style="display:none;">🎉 You are a premium user now!</h2>
+<button id="show-leaderboard" style="display:none;">Show Leaderboard</button>
 <ul id="leaderboard-list" style="margin-top: 15px;"></ul>
 
         
